--- a/src/global.less
+++ b/src/global.less
@@ -2,3 +2,10 @@
 body {
   background-color: #f7f7f7;
 }
+.video-drop-down {
+  .ant-dropdown-menu-item-active {
+    color: #2f3152 !important;
+    background: rgba(0, 0, 0, 0.07);
+    font-weight: 600;
+  }
+}
