--- a/src/global.less
+++ b/src/global.less
@@ -1,6 +1,9 @@
 @import 'reset.min.css';
 body {
+  height: 100vh;
+  width: 100vw;
   background-color: #f7f7f7;
+  overflow: hidden;
   ::-webkit-scrollbar {
     width: 8px;
     height: 8px;
