--- a/src/global.less
+++ b/src/global.less
@@ -28,3 +28,10 @@ body {
     font-weight: 600;
   }
 }
+.my-bar {
+  background: linear-gradient(to right, #fd0505, #ffa805) !important;
+  height: 3px !important;
+  .my-peg {
+    box-shadow: unset !important;
+  }
+}
