--- a/src/global.less
+++ b/src/global.less
@@ -21,6 +21,10 @@ body {
     background: transparent;
   }
 }
+.swiper-container,
+.swiper-wrapper {
+  z-index: 0;
+}
 .video-drop-down {
   .ant-dropdown-menu-item-active {
     color: #2f3152 !important;
