--- a/src/global.less
+++ b/src/global.less
@@ -39,3 +39,12 @@ body {
     box-shadow: unset !important;
   }
 }
+//-----------------------antd-----------------------------------
+.ant-cascader-menu-item-active:not(.ant-cascader-menu-item-disabled),
+.ant-cascader-menu-item-active:not(.ant-cascader-menu-item-disabled):hover {
+  color: #00a1d6;
+}
+.ant-cascader-menu-item {
+  font-size: 14px;
+  color: #000;
+}
